# mekamb-music

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  capacitor.config.ts  docker-compose.yml  index.html  mobileui.bundle  package-lock.json  package.json  pyproject.toml  vite.config.mts
alembic/: env.py
app/: __init__.py  main.py
desktop/: main.js  preload.js
native-android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
native-desktop/: README.md  settings.gradle.kts
native-ios/: README.md
native-linux/: build.gradle.kts  package-appimage.sh
native-mac/: build.gradle.kts
native-windows/: build.gradle.kts
scripts/: configure_lidarr_deezer.py  configure_servarr_auth.py  generate-desktop-icons.sh  qbittorrent_configure.py
tests/: test_api_auth.py  test_api_downloads.py  test_api_imports.py  test_api_recommendations.py  test_api_sources.py  test_api_tracks.py  test_audio.py  test_audio_features.py  test_auth.py  test_auth_accounts.py  test_bencode.py  test_catalog_routes.py  test_collaborative_filtering.py  test_ia_backfill_worker.py  test_ia_direct_fetch_worker.py  test_ia_import.py  test_import_repository.py  test_import_service.py  test_import_status.py  test_import_worker.py  test_indexers.py  test_internet_archive_client.py  test_lidarr_client.py  test_lidarr_reconcile.py  test_openapi_export.py  test_personal_1337x.py  test_piratebay.py  test_qbittorrent.py  test_qbittorrent_configure.py  test_readiness.py  test_recommendation_engine.py  test_runtime.py  test_source_search.py  (+8 more)
(+208 files in other folders)
