[project]
name = "mekamb-music"
version = "0.1.0"
description = "Private Spotify-like music backend with a personal 1337x source provider."
requires-python = ">=3.11"
dependencies = [
  "1337x==2.1.1",
  "alembic>=1.13.0",
  "asyncpg>=0.30.0",
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "mutagen>=1.47.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "redis[hiredis]>=5.0.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
mekamb-export-openapi = "app.api.openapi_export:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
